# resume_backend

./: .gitignore  README.md  alembic.ini  pyproject.toml  sqs_worker.py
.github/workflows/: backend-setup.yml  deploy.yaml  deploy.yml  redis-setup.yml
alembic/: env.py
alembic/versions/: 07d555ba14d5_init_models.py  3686be00a031_remove_not_needed_tables.py  4f2521e8bf17_renamed_fields_to_generic_storage_key.py  5709ad826a91_move_json_fields_to_s3_urls_in_.py  a52ddc6886f2_add_last_login_at_to_users.py  dcd43669e6df_add_plans_and_user_plan_usage_tables.py
app/: celery_app.py  main.py  sqs_worker.py  sqs_worker.service
app/api/: dependencies.py
app/api/routes/: ai_resume.py  auth.py  cover_letter.py  mock_interview.py  plans.py  resume.py  scoring.py  share.py
app/core/: config.py  logging.py  security.py
app/database/: auth.py  connection.py  mock_interview.py  plan.py  resume.py  seeder.py
app/middleware/: auth_dependency.py
app/models/: __init__.py  auth.py  mock_interview.py  plan.py  resume.py
app/schemas/: auth.py  cover_letter.py  mock_interview.py  plan.py  resume.py  scoring.py  share.py  user.py
app/services/: ai_resume_service.py  auth_service.py  cover_letter_service.py  mock_interview_service.py  resume_service.py  scoring_service.py  share_service.py
app/tasks/: mock_interview.py
app/utils/: ai_assistant.py  aws_utils.py  constants.py  email_utils.py  mock_data.py  mock_interview_utils.py  openai_client.py  plan_usage.py  prompts.py  resume_parser.py  utils.py
app/webRTC/: video_stream.py
