[project]
name = "resume_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "neelam",email = "neelamyadav1@kpmg.com"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "authlib (>=1.4.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "boto3 (>=1.36.17,<2.0.0)",
    "botocore (>=1.36.17,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai (>=1.61.1,<2.0.0)",
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "bcrypt (<4.1)",
    "pymupdf (>=1.25.3,<2.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"

[tool.ruff]
# Optional: apply formatting only to certain directories
exclude = [
  "alembic/",
]
